fix: add link for the logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Header -->
   <header class="l-header" id="header">
     <nav class="nav bd-container">
-      <a href="/" class="nav_logo">
+      <a href="https://dmytromatrosov.github.io/kkstg/" class="nav_logo">
         <img src="img/logo.svg" width="100px" alt="KKS Tarnowskie Góry" />
       </a>
 
