refactor: replace insta, remove team block, rename nav

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="nav_menu" id="nav-menu">
         <ul class="nav_list">
           <li class="nav_item">
-            <a href="#home" class="nav_link">Klub</a>
+            <a href="#" class="nav_link">Drużyny</a>
           </li>
           <li class="nav_item">
-            <a href="#team" class="nav_link">Team</a>
+            <a href="#team" class="nav_link">Sezon</a>
           </li>
           <li class="hidden_item">
             <a href="#arena" class="nav_link">Arena</a>
@@ -41,6 +41,9 @@
           </li>
           <li class="nav_item">
             <a href="#partners" class="nav_link">Sponsorzy</a>
+          </li>
+          <li class="nav_item">
+            <a href="#" class="nav_link">Stu wspaniałych</a>
           </li>
         </ul>
       </div>
@@ -86,7 +89,7 @@
 
       <div class="team_container bd-grid">
 
-        <div class="team_content">
+        <!-- <div class="team_content">
           <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             xml:space="preserve">
             <g>
@@ -106,7 +109,7 @@
           <p class="team_description">
             Obecny sztab trenerski i zawodnicy
           </p>
-        </div>
+        </div> -->
 
         <div class="team_content">
           <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -274,8 +277,8 @@
               class="bx bxl-facebook"></i></a>
           <a href="https://www.linkedin.com/company/kks-tg/" class="footer_social" target="_blank"><i
               class="bx bxl-linkedin"></i></a>
-          <a href="https://www.instagram.com/kkstgbasketball/" class="footer_social" target="_blank"><i
-              class="bx bxl-instagram"></i></a>
+          <a href="https://chat.whatsapp.com/IrP4YsM1FI3DM5pPkJZIH6" class="footer_social" target="_blank"><i
+              class="bx bxl-whatsapp"></i></a>
         </div>
       </div>
 
