feat: donation section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#partners" class="nav_link">Sponsorzy</a>
           </li>
           <li class="nav_item">
-            <a href="#" class="nav_link">Stu wspaniałych</a>
+            <a href="#donate" class="nav_link">Stu wspaniałych</a>
           </li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
   <main class="l-main">
 
     <!--Home-->
-    <section class="home" id="home">
+    <section class="home" >
       <div class="home_container bd-container bd-grid">
 
         <div class="home_data">
@@ -223,6 +223,8 @@
       </div>
     </section>
 
+
+    <!-- Partners -->
     <section class="partners-section section bd-container" id="partners">
       <h2 class="section-title">Nasi przyjaciele i partnerzy</h2>
 
@@ -260,6 +262,33 @@
       </div>
     </section>
 
+
+    <!-- Donate  -->
+    <section class="section bd-container" id="donate">
+      <div class="arena_container bd-grid">
+        <div class="arena_data">
+          <h2 class="section-title arena_initial">
+            Stu Wspaniałych
+          </h2>
+          <p class="arena_description">
+            <strong>STU Wspaniałych</strong> to osoby kochające koszykówkę oraz swoje miasto, które pragną rozwoju klubu
+            w którym
+            chętnie przyczynią się do tworzenia widowiska sportowego.
+
+          </p>
+          <p>
+            Zapraszamy do udziału w programie <strong>STU wspaniałych na 100% KKSTG!</strong>, jego celem jest
+            wspieranie
+            działalności klubu poprzez nabywanie pakietów świadczeń sponsorskich. Uczestnicy tego programu otrzymują
+            szereg benefitów oraz przywilejów.
+          </p>
+        </div>
+
+        <img src="img/100_best.png"" alt=" Hala Sportowa" class="arena_img" />
+      </div>
+    </section>
+
+
   </main>
 
   <!--Footer-->
@@ -270,7 +299,7 @@
         <b class="footer_logo">
           <span>KKS</span> Tarnowskie Góry
         </b>
-        <span class="footer_description">Twój ulubiony klub.</span>
+        <span class="footer_description">Bądź na bieżąco.</span>
 
         <div>
           <a href="https://www.facebook.com/kkstg" class="footer_social" target="_blank"><i
