fix: add links to stats icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div class="nav_menu" id="nav-menu">
         <ul class="nav_list">
           <li class="nav_item">
-            <a href="#" class="nav_link">Drużyny</a>
+            <a href="https://basketball.eurobasket.com/team/KKS-Tarnowskie-Gory/21255?Page=1"
+              class="nav_link">Drużyny</a>
           </li>
           <li class="nav_item">
             <a href="#team" class="nav_link">Sezon</a>
@@ -68,7 +69,7 @@
   <main class="l-main">
 
     <!--Home-->
-    <section class="home" >
+    <section class="home">
       <div class="home_container bd-container bd-grid">
 
         <div class="home_data">
@@ -112,52 +113,61 @@
         </div> -->
 
         <div class="team_content">
-          <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            xml:space="preserve">
-            <g>
-              <path
-                d="M20.5,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C21.5,37.1,21,36.6,20.5,36.6z" />
-              <path
-                d="M33.5,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C34.5,37.1,34.1,36.6,33.5,36.6z" />
-              <path
-                d="M46.6,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C47.6,37.1,47.2,36.6,46.6,36.6z" />
-              <path
-                d="M20.5,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C21.5,50,21,49.5,20.5,49.5z" />
-              <path
-                d="M33.5,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C34.5,50,34.1,49.5,33.5,49.5z" />
-              <path
-                d="M46.6,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C47.6,50,47.2,49.5,46.6,49.5z" />
-              <path d="M56,15.4H34.3v-1.9c2.3-0.9,3.9-3.1,3.9-5.7c0-3.4-2.8-6.1-6.2-6.1s-6.2,2.7-6.2,6.1c0,2.6,1.6,4.8,3.9,5.7v1.9H8
+          <a class="team_link" href="https://www.eurobasket.com/team/KKS-Tarnowskie-Gory/21255?Page=2" target="_blank">
+
+
+            <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M20.5,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C21.5,37.1,21,36.6,20.5,36.6z" />
+                <path
+                  d="M33.5,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C34.5,37.1,34.1,36.6,33.5,36.6z" />
+                <path
+                  d="M46.6,36.6h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C47.6,37.1,47.2,36.6,46.6,36.6z" />
+                <path
+                  d="M20.5,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C21.5,50,21,49.5,20.5,49.5z" />
+                <path
+                  d="M33.5,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C34.5,50,34.1,49.5,33.5,49.5z" />
+                <path
+                  d="M46.6,49.5h-3.1c-0.6,0-1,0.4-1,1v3c0,0.6,0.4,1,1,1h3.1c0.6,0,1-0.4,1-1v-3C47.6,50,47.2,49.5,46.6,49.5z" />
+                <path d="M56,15.4H34.3v-1.9c2.3-0.9,3.9-3.1,3.9-5.7c0-3.4-2.8-6.1-6.2-6.1s-6.2,2.7-6.2,6.1c0,2.6,1.6,4.8,3.9,5.7v1.9H8
 		c-3.4,0-6.3,2.8-6.3,6.3V56c0,3.4,2.8,6.3,6.3,6.3h48c3.4,0,6.3-2.8,6.3-6.3V21.6C62.3,18.2,59.4,15.4,56,15.4z M32,6.2
 		c0.9,0,1.7,0.7,1.7,1.6c0,0.9-0.7,1.6-1.7,1.6s-1.7-0.7-1.7-1.6C30.3,6.9,31.1,6.2,32,6.2z M8,19.9h48c1,0,1.8,0.8,1.8,1.8v6.2H6.3
 		v-6.2C6.3,20.6,7,19.9,8,19.9z M56,57.8H8c-1,0-1.8-0.8-1.8-1.8V32.3h51.5V56C57.8,57,57,57.8,56,57.8z" />
-            </g>
-          </svg>
+              </g>
+            </svg>
 
-          <h3 class="team_title">Terminarz</h3>
-          <p class="team_description">
-            Przeglądać informacje o przeszłych i nadchodzących meczach!
-          </p>
+            <h3 class="team_title">Terminarz</h3>
+            <p class="team_description">
+              Przeglądać informacje o przeszłych i nadchodzących meczach!
+            </p>
+
+          </a>
         </div>
 
 
 
         <div class="team_content">
-          <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            xml:space="preserve">
-            <g>
-              <path
-                d="M60,57.8H6.3V4c0-1.2-1-2.3-2.3-2.3S1.8,2.8,1.8,4v54.1c0,2.3,1.9,4.2,4.2,4.2H60c1.2,0,2.3-1,2.3-2.3S61.2,57.8,60,57.8z" />
-              <path d="M59,22.1H47.3c-1.2,0-2.3,1-2.3,2.3s1,2.3,2.3,2.3h6.8l-5.3,4.6H35.7c-0.7,0-1.4,0.3-1.8,0.9l-7.1,9.3H16.3
+          <a class="team_link" href="https://www.eurobasket.com/team/KKS-Tarnowskie-Gory/21255?Page=3" target="_blank">
+
+
+            <svg class="team_img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M60,57.8H6.3V4c0-1.2-1-2.3-2.3-2.3S1.8,2.8,1.8,4v54.1c0,2.3,1.9,4.2,4.2,4.2H60c1.2,0,2.3-1,2.3-2.3S61.2,57.8,60,57.8z" />
+                <path d="M59,22.1H47.3c-1.2,0-2.3,1-2.3,2.3s1,2.3,2.3,2.3h6.8l-5.3,4.6H35.7c-0.7,0-1.4,0.3-1.8,0.9l-7.1,9.3H16.3
 		c-1.2,0-2.3,1-2.3,2.3s1,2.3,2.3,2.3h11.6c0.7,0,1.4-0.3,1.8-0.9l7.1-9.3h12.9c0.5,0,1.1-0.2,1.5-0.6l6.6-5.8v7.7
 		c0,1.2,1,2.3,2.3,2.3s2.3-1,2.3-2.3V25.3C62.3,23.6,60.8,22.1,59,22.1z" />
-            </g>
-          </svg>
+              </g>
+            </svg>
 
-          <h3 class="team_title">Statystyka</h3>
-          <p class="team_description">
-            Śledź statystyki drużyny i zawodników
-          </p>
+            <h3 class="team_title">Statystyka</h3>
+            <p class="team_description">
+              Śledź statystyki drużyny i zawodników
+            </p>
+          </a>
         </div>
       </div>
     </section>
@@ -314,7 +324,7 @@
       <div class="footer_content">
         <h3 class="footer_title">Kontakt</h3>
         <ul>
-          <li><a href="https://maps.app.goo.gl/v7G65kWb96jNKyns5" class="footer_link">
+          <li><a href="https://maps.app.goo.gl/v7G65kWb96jNKyns5" class="footer_link" target="_blank">
               <i class="bx bx-map"></i>
               Obwodnica 8, Tarnowskie Góry,
               Śląskie 42-600, PL</a></li>
