feat: add description and contact button at donation section

--- a/index.html
+++ b/index.html
@@ -296,6 +296,13 @@
 
         <img src="img/100_best.png"" alt=" Hala Sportowa" class="arena_img" />
       </div>
+      <div class="arena_container bd-grid">
+        <div class="arena_data">
+          <h2 class="section-subtitle arena_initial">Dołączyć do klubu STU wspaniałych na 100% KKS TG!</h2>
+          <span>wypełnij formularz, a my się z Tobą skontaktujemy</span>
+        </div>
+        <a href="#" class="button contact_button">Dołączyć</a>
+      </div>
     </section>
 
 
@@ -340,7 +347,6 @@
           <li><a href="#" class="footer_link">Terms and conditions</a></li>
         </ul>
       </div>
-
     </div>
 
     <p class="footer_copy">
