styles: add bg to partners

--- a/index.html
+++ b/index.html
@@ -235,39 +235,43 @@
 
 
     <!-- Partners -->
-    <section class="partners-section section bd-container" id="partners">
-      <h2 class="section-title">Nasi przyjaciele i partnerzy</h2>
+    <section class=" partners " id="partners">
+      <div class="partners-section section bd-container">
 
-      <div class="partners-container">
-        <div class="partner">
-          <img src="img/partner1_logo.png" class="partner_img" alt="Partner 1">
-        </div>
-        <div class="partner">
-          <img src="img/partner2_logo.png" class="partner_img" alt="Partner 2">
-        </div>
-        <div class="partner">
-          <img src="img/partner3_logo.png" class="partner_img" alt="Partner 3">
-        </div>
-        <div class="partner">
-          <img src="img/partner4_logo.png" class="partner_img" alt="Partner 4">
-        </div>
-        <div class="partner">
-          <img src="img/partner5_logo.png" class="partner_img" alt="Partner 5">
-        </div>
-        <div class="partner">
-          <img src="img/partner6_logo.png" class="partner_img" alt="Partner 6">
-        </div>
-        <div class="partner">
-          <img src="img/partner7_logo.png" class="partner_img" alt="Partner 7">
-        </div>
-        <div class="partner">
-          <img src="img/partner8_logo.png" class="partner_img" alt="Partner 8">
-        </div>
-        <div class="partner">
-          <img src="img/partner9_logo.png" class="partner_img" alt="Partner 9">
-        </div>
-        <div class="partner">
-          <img src="img/partner10_logo.png" class="partner_img" alt="Partner 10">
+
+        <h2 class="section-title">Nasi przyjaciele i partnerzy</h2>
+
+        <div class="partners-container">
+          <div class="partner">
+            <img src="img/partner1_logo.png" class="partner_img" alt="Partner 1">
+          </div>
+          <div class="partner">
+            <img src="img/partner2_logo.png" class="partner_img" alt="Partner 2">
+          </div>
+          <div class="partner">
+            <img src="img/partner3_logo.png" class="partner_img" alt="Partner 3">
+          </div>
+          <div class="partner">
+            <img src="img/partner4_logo.png" class="partner_img" alt="Partner 4">
+          </div>
+          <div class="partner">
+            <img src="img/partner5_logo.png" class="partner_img" alt="Partner 5">
+          </div>
+          <div class="partner">
+            <img src="img/partner6_logo.png" class="partner_img" alt="Partner 6">
+          </div>
+          <div class="partner">
+            <img src="img/partner7_logo.png" class="partner_img" alt="Partner 7">
+          </div>
+          <div class="partner">
+            <img src="img/partner8_logo.png" class="partner_img" alt="Partner 8">
+          </div>
+          <div class="partner">
+            <img src="img/partner9_logo.png" class="partner_img" alt="Partner 9">
+          </div>
+          <div class="partner">
+            <img src="img/partner10_logo.png" class="partner_img" alt="Partner 10">
+          </div>
         </div>
       </div>
     </section>
