feat: add media links at home section

--- a/index.html
+++ b/index.html
@@ -77,9 +77,19 @@
           <h2 class="home_subtitle">KOSZYKARSKI KLUB <br />
             SPORTOWY </h2>
           <h2 class="home_subtitle">TARNOWSKIE GÓRY </h2>
+
+          <div>
+            <a href="https://www.facebook.com/kkstg" class="home_media" target="_blank"><i
+                class="bx bxl-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/kks-tg/" class="home_media" target="_blank"><i
+                class="bx bxl-linkedin"></i></a>
+            <a href="https://chat.whatsapp.com/IrP4YsM1FI3DM5pPkJZIH6" class="home_media" target="_blank"><i
+                class="bx bxl-whatsapp"></i></a>
+          </div>
         </div>
 
         <img src="img/basketball.svg" alt="Basketball" class="home_img" />
+
       </div>
     </section>
 
