--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <h2 class="section-subtitle arena_initial">Dołączyć do klubu STU wspaniałych na 100% KKS TG!</h2>
           <span>wypełnij formularz, a my się z Tobą skontaktujemy</span>
         </div>
-        <a href="#" class="button contact_button">Dołączyć</a>
+        <a href="#" class="button contact_button">Dołącz</a>
       </div>
     </section>
 
